Fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ body {
   margin-top: 3rem;
 }
 
+.hero-text {
+  max-width: 80%;
+}
+
 .hero-img {
   padding-top: 8rem;
   background-repeat: no-repeat;
@@ -107,6 +111,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
+  max-width: 80%;
 }
 
 /* Create four equal columns that sits next to each other */
@@ -227,16 +232,22 @@ a:hover {
 
 .footer {
   /* display: inline-block; */
-  /* padding: 20rem; */
+  /* padding: 20px; */
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-between; */
   align-items: center;
   background-color: #38b6ff;
+  max-width: 80%;
+  margin: auto;
 }
 
 .footer-brand {
   text-decoration: none;
 }
+
+/* .footer a {
+  padding: 2rem;
+} */
 
 /* .top-btn {
   display: none;
